# bakani

./: Cargo.toml  LICENSE-MIT  README.md
src/: cli.yaml  lib.rs  main.rs
src/model/: manga.rs
test/static/: Baka-Updates Manga - Baby Steps.html  Baka-Updates Manga - Boku wa Tomodachi ga Sukunai (Novel).html  Baka-Updates Manga - Boku wa Tomodachi ga Sukunai.html  Baka-Updates Manga - Hunter x Hunter.html  Baka-Updates Manga - Skip Beat!.html
test/static/HigeHiro/: Baka-Updates Manga - Series.html
test/static/SkipBeat/: Baka-Updates Manga - Series.html
