[package]
name = "bakani"
version = "0.1.0"
edition = "2018"
authors = [ "Evan Stoll <evanjsx@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
clap = "3.0.0-beta.2"
anyhow = "1.0.41"
selectors = "0.22.0"
scraper = "0.12.0"
strum_macros = "0.21.1"
strum = { version = "0.21.0", features = ["derive"] }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"

[dev-dependencies]
test-case = "1.1.0"
