[package]
name = "bakani"
version = "0.1.0"
edition = "2018"
authors = [ "Evan Stoll <evanjsx@gmail.com>" ]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
anyhow = "1.0.41"
selectors = "0.22.0"
scraper = "0.12.0"
strum_macros = "0.21.1"
strum = { version = "0.21.0", features = ["derive"] }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
tokio = { version = "1.7.0", features = ["full"] }
env_logger = "0.8.4"
tracing = { version = "0.1.26", features = ["log"] }
tracing-subscriber = "0.2.19"

[dev-dependencies]
tokio-test = "0.4.2"
test-case = "1.1.0"
